--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/black.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/black.css
@@ -18,6 +18,7 @@
   --search-area-mobile-top: 0;
   --tooltipster-content: #f2f2f2;
   --chart-grid: #222222;
+  --magnificCloseColor: var(--support-popup-text);
 } 
 
 /* Use a background color on black theme to solve "invisible" icons */
