--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/gray.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/gray.css
@@ -18,4 +18,5 @@
     --search-area-mobile-top: 0;
     --tooltipster-content: #f2f2f2;
     --chart-grid: #222222;
+    --magnificCloseColor: var(--ca-named-black);
 } 
