--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/azure.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/themes/azure.css
@@ -18,4 +18,9 @@
     --search-area-mobile-top: 0;
     --tooltipster-content: #101010;
     --chart-grid: #dddddd;
+    --magnificCloseColor: var(--support-popup-text);
 } 
+.Theme--azure #alternateView {
+    opacity: 0.95;
+}
+  
