--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/styles/community.applications.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Narrow/styles/community.applications.css
@@ -31,6 +31,11 @@ body:has(#alternateView[style]:not([style*="display: none"])),
 body:has(.sidenavShow) {
   overflow: hidden !important;
 }
+/* Hide the back to top and move to end buttons (on main area) when the sidebar is visible */
+body:has(.sidenavShow) .back_to_top,
+body:has(.sidenavShow) .move_to_end {
+  z-index: 0;
+}
 /* Dim the main area when the sidebar is visible */
 /* Also apply when a sweet alert is being displayed */
 body:has(.sidenavShow) .caDimmable,
@@ -139,9 +144,7 @@ a {
   align-items: stretch;
   width: 100%;
 }
-.mainArea.menuShowing {
-  height: var(--mainAreaHeight);
-}
+
 /* ==========================================================================
   Components
   ========================================================================== */
@@ -588,6 +591,7 @@ input[type="button"][disabled] {
 body:has(.sidenavHide) .sidebar {
   z-index: -1;
 }
+
 /* Utility Classes */
 .ca_multiselect {
   float: right;
@@ -610,7 +614,9 @@ body:has(.sidenavHide) .sidebar {
   opacity: 0.7;
   margin-left: 1rem;
 }
-
+.ca_statistics table {
+  background-color: revert;
+}
 .appDocker::before {
   font-family: Unraid;
   content: '\e90b';
@@ -703,10 +709,6 @@ a.appIconsPopUp {
 .appRepository::before {
   font-family: 'fontAwesome';
   content: '\f2be';
-}
-
-.back_to_top_hide {
-  z-index: 0;
 }
 
 .betaPopupBackground,
@@ -1551,16 +1553,19 @@ img.popupAuthorIcon {
 }
 
 .popupCloseArea {
-    position: fixed;
-    margin-left: 10px;
-    margin-top: -2rem;
-    padding-top: 2rem;
-    padding-bottom: 1rem;
-    width: 100%;
-    background-color: var(--sidebar-background);
-    z-index: 5;
+  position: fixed;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  width: 90%;
+  background-color: var(--sidebar-background);
+  z-index: 5;
+  max-width: 70rem;
+  right: 0;
+  top: 0;
 }
-
+.popupCloseArea > div:first-child {
+  margin-left: 2rem;
+}
 .popupDescription {
   font-size: 1.5rem;
   line-height: 1.7rem !important;
